--- a/Scripts/get_nba_stats.ipynb
+++ b/Scripts/get_nba_stats.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
+    "#import os\n",
     "from selenium import webdriver\n",
+    "#path = os.path.abspath(webdriver.__file__)\n",
     "import time\n",
     "from openpyxl import load_workbook"
    ]
@@ -23,6 +25,20 @@
      "output_type": "stream",
      "text": [
       "Enter the first year from which you want data: 2005\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'xlsxwriter'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-4812fbcf0043>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdoEverything\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-10-4d1fc8cd219f>\u001b[0m in \u001b[0;36mdoEverything\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0moutcomeDF\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mallDF\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mwriteToExcel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteamDF\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplayerAnnualDF\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutcomeDF\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-9-4793da636516>\u001b[0m in \u001b[0;36mwriteToExcel\u001b[0;34m(teamDF, playerAnnualDF, outcomeDF)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mr\"/Users/lorneez/Documents/Sports_Model/Data/NBA_data.xlsx\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mExcelWriter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mengine\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'xlsxwriter'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mwriter\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mteamDF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_excel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwriter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Team Data\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pandas/io/excel.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, path, engine, date_format, datetime_format, **engine_kwargs)\u001b[0m\n\u001b[1;32m   1716\u001b[0m                  date_format=None, datetime_format=None, **engine_kwargs):\n\u001b[1;32m   1717\u001b[0m         \u001b[0;31m# Use the xlsxwriter module as the Excel writer.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1718\u001b[0;31m         \u001b[0;32mimport\u001b[0m \u001b[0mxlsxwriter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1719\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1720\u001b[0m         super(_XlsxWriter, self).__init__(path, engine=engine,\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'xlsxwriter'"
      ]
     }
    ],
@@ -87,6 +103,7 @@
     "        # set driver type\n",
     "        #driver = webdriver.Chrome(options=phantomOptions)\n",
     "        driver = webdriver.Chrome()\n",
+    "        #driver = webdriver.Chrome()\n",
     "\n",
     "        \n",
     "        driver.get(url.format(year))\n",
@@ -354,7 +371,8 @@
    "source": [
     "def writeToExcel(teamDF, playerAnnualDF, outcomeDF):\n",
     "\n",
-    "    path = r\"/Users/justinholmes/Desktop/Sports_Model/Data/NBA_data.xlsx\"\n",
+    "    #path = r\"/Users/justinholmes/Desktop/Sports_Model/Data/NBA_data.xlsx\"\n",
+    "    path = r\"/Users/lorneez/Documents/Sports_Model/Data/NBA_data.xlsx\"\n",
     "\n",
     "    with pd.ExcelWriter(path, engine='xlsxwriter') as writer: \n",
     "\n",
@@ -365,9 +383,12 @@
     "        writer.save() \n",
     "        writer.close()\n",
     "        \n",
-    "    teamDF.to_csv(r\"/Users/justinholmes/Desktop/Sports_Model/Data/teamData.csv\", index=False)\n",
-    "    playerAnnualDF.to_csv(r\"/Users/justinholmes/Desktop/Sports_Model/Data/playerData.csv\", index=False)\n",
-    "    outcomeDF.to_csv(r\"/Users/justinholmes/Desktop/Sports_Model/Data/outcomeData.csv\", index=False)"
+    "    #teamDF.to_csv(r\"/Users/justinholmes/Desktop/Sports_Model/Data/teamData.csv\", index=False)\n",
+    "    #playerAnnualDF.to_csv(r\"/Users/justinholmes/Desktop/Sports_Model/Data/playerData.csv\", index=False)\n",
+    "    #outcomeDF.to_csv(r\"/Users/justinholmes/Desktop/Sports_Model/Data/outcomeData.csv\", index=False)\n",
+    "    teamDF.to_csv(r\"/Users/lorneez/Documents/Sports_Model/Data/teamData.csv\", index=False)\n",
+    "    playerAnnualDF.to_csv(r\"/Users/lorneez/Documents/Sports_Model/Data/playerData.csv\", index=False)\n",
+    "    outcomeDF.to_csv(r\"/Users/lorneez/Documents/Sports_Model/Data/outcomeData.csv\", index=False)"
    ]
   },
   {
@@ -388,6 +409,13 @@
     "    \n",
     "    writeToExcel(teamDF, playerAnnualDF, outcomeDF)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -406,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
