--- a/Scripts/basicPredictions.ipynb
+++ b/Scripts/basicPredictions.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import f1_score, make_scorer, classification_report\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
     "import numpy as np\n",
     "from collections import defaultdict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +37,15 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "## Format data to be used for "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +90,7 @@
        "      <td>79</td>\n",
        "      <td>Detroit Pistons</td>\n",
        "      <td>87</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "      <td>22076</td>\n",
        "      <td>166</td>\n",
        "      <td>Detroit Pistons</td>\n",
@@ -96,7 +103,7 @@
        "      <td>98</td>\n",
        "      <td>Dallas Mavericks</td>\n",
        "      <td>107</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "      <td>20041</td>\n",
        "      <td>205</td>\n",
        "      <td>Dallas Mavericks</td>\n",
@@ -109,7 +116,7 @@
        "      <td>78</td>\n",
        "      <td>Los Angeles Lakers</td>\n",
        "      <td>89</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "      <td>18997</td>\n",
        "      <td>167</td>\n",
        "      <td>Los Angeles Lakers</td>\n",
@@ -122,7 +129,7 @@
        "      <td>109</td>\n",
        "      <td>Cleveland Cavaliers</td>\n",
        "      <td>104</td>\n",
-       "      <td>2OT</td>\n",
+       "      <td>2</td>\n",
        "      <td>19730</td>\n",
        "      <td>213</td>\n",
        "      <td>Indiana Pacers</td>\n",
@@ -135,7 +142,7 @@
        "      <td>92</td>\n",
        "      <td>Orlando Magic</td>\n",
        "      <td>93</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "      <td>15138</td>\n",
        "      <td>185</td>\n",
        "      <td>Orlando Magic</td>\n",
@@ -152,52 +159,43 @@
        "3  2005  november    Indiana Pacers         109  Cleveland Cavaliers      104   \n",
        "4  2005  november   Milwaukee Bucks          92        Orlando Magic       93   \n",
        "\n",
-       "   OT?  Attend  Total Points              Winner  \n",
-       "0  NaN   22076           166     Detroit Pistons  \n",
-       "1  NaN   20041           205    Dallas Mavericks  \n",
-       "2  NaN   18997           167  Los Angeles Lakers  \n",
-       "3  2OT   19730           213      Indiana Pacers  \n",
-       "4  NaN   15138           185       Orlando Magic  "
+       "  OT?  Attend  Total Points              Winner  \n",
+       "1   0   20041           205    Dallas Mavericks  \n",
+       "2   0   18997           167  Los Angeles Lakers  \n",
+       "3   2   19730           213      Indiana Pacers  \n",
+       "4   0   15138           185       Orlando Magic  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# drop unwanted columns\n",
     "outcomeData = outcomeData.drop([\"Start Time\", \"Box Score\", \"Notes\"], axis=1)\n",
+    "\n",
+    "# change OT to integer value for number of OT rounds\n",
+    "outcomeData.loc[(outcomeData[\"OT?\"].isna()),'OT?']= 0\n",
+    "outcomeData.loc[(outcomeData[\"OT?\"] == \"OT\"),'OT?']= 1\n",
+    "outcomeData.loc[(outcomeData[\"OT?\"] == \"2OT\"),'OT?']= 2\n",
+    "outcomeData.loc[(outcomeData[\"OT?\"] == \"3OT\"),'OT?']= 3\n",
+    "outcomeData.loc[(outcomeData[\"OT?\"] == \"4OT\"),'OT?']= 4\n",
     "\n",
     "outcomeData.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([nan, '2OT', 'OT', '3OT', '4OT'], dtype=object)"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "outcomeData[\"OT?\"].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
-    "outcomeData.loc[(outcomeData[\"OT?\"] == 'Dance'),'Event']='Hip-Hop'\n"
+    "outcomeData.loc[(outcomeData[\"OT?\"].isna()),'OT?']= 0\n",
+    "outcomeData.loc[(outcomeData[\"OT?\"] == \"OT\"),'OT?']= 1\n",
+    "outcomeData.loc[(outcomeData[\"OT?\"] == \"2OT\"),'OT?']= 2\n",
+    "outcomeData.loc[(outcomeData[\"OT?\"] == \"3OT\"),'OT?']= 3\n",
+    "outcomeData.loc[(outcomeData[\"OT?\"] == \"4OT\"),'OT?']= 4"
    ]
   },
   {
@@ -209,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -267,14 +265,14 @@
        "      <th></th>\n",
        "      <th>Team</th>\n",
        "      <th>Year</th>\n",
-       "      <th>G_x</th>\n",
-       "      <th>MP_x</th>\n",
-       "      <th>FG_x</th>\n",
-       "      <th>FGA_x</th>\n",
-       "      <th>FG%_x</th>\n",
-       "      <th>3P_x</th>\n",
-       "      <th>3PA_x</th>\n",
-       "      <th>3P%_x</th>\n",
+       "      <th>G_PG</th>\n",
+       "      <th>MP_PG</th>\n",
+       "      <th>FG_PG</th>\n",
+       "      <th>FGA_PG</th>\n",
+       "      <th>FG%_PG</th>\n",
+       "      <th>3P_PG</th>\n",
+       "      <th>3PA_PG</th>\n",
+       "      <th>3P%_PG</th>\n",
        "      <th>...</th>\n",
        "      <th>TOV%</th>\n",
        "      <th>ORB%</th>\n",
@@ -415,19 +413,19 @@
        "</div>"
       ],
       "text/plain": [
-       "                Team  Year  G_x   MP_x  FG_x  FGA_x  FG%_x  3P_x  3PA_x  \\\n",
-       "0      Phoenix Suns*  2005   82  241.2  40.9   85.6  0.477   9.7   24.7   \n",
-       "1  Sacramento Kings*  2005   82  242.1  39.1   85.1  0.459   6.4   17.0   \n",
-       "2  Dallas Mavericks*  2005   82  240.6  37.3   81.6  0.457   5.6   15.5   \n",
-       "3        Miami Heat*  2005   82  243.7  37.8   77.7  0.486   5.8   15.4   \n",
-       "4    Boston Celtics*  2005   82  242.4  37.1   79.4  0.468   5.3   15.3   \n",
+       "                Team  Year  G_PG  MP_PG  FG_PG  FGA_PG  FG%_PG  3P_PG  3PA_PG  \\\n",
+       "0      Phoenix Suns*  2005    82  241.2   40.9    85.6   0.477    9.7    24.7   \n",
+       "1  Sacramento Kings*  2005    82  242.1   39.1    85.1   0.459    6.4    17.0   \n",
+       "2  Dallas Mavericks*  2005    82  240.6   37.3    81.6   0.457    5.6    15.5   \n",
+       "3        Miami Heat*  2005    82  243.7   37.8    77.7   0.486    5.8    15.4   \n",
+       "4    Boston Celtics*  2005    82  242.4   37.1    79.4   0.468    5.3    15.3   \n",
        "\n",
-       "   3P%_x  ...  TOV%  ORB%  FT/FGA  eFG%.1  TOV%.1  DRB%  FT/FGA.1  \\\n",
-       "0  0.393  ...  12.4  27.5   0.222   0.478    12.0  68.3     0.176   \n",
-       "1  0.374  ...  12.0  28.8   0.226   0.493    13.3  69.0     0.214   \n",
-       "2  0.364  ...  12.5  28.6   0.273   0.472    14.3  70.2     0.239   \n",
-       "3  0.377  ...  13.1  27.0   0.260   0.460    12.4  74.1     0.242   \n",
-       "4  0.349  ...  14.7  27.2   0.273   0.481    14.2  70.1     0.274   \n",
+       "   3P%_PG  ...  TOV%  ORB%  FT/FGA  eFG%.1  TOV%.1  DRB%  FT/FGA.1  \\\n",
+       "0   0.393  ...  12.4  27.5   0.222   0.478    12.0  68.3     0.176   \n",
+       "1   0.374  ...  12.0  28.8   0.226   0.493    13.3  69.0     0.214   \n",
+       "2   0.364  ...  12.5  28.6   0.273   0.472    14.3  70.2     0.239   \n",
+       "3   0.377  ...  13.1  27.0   0.260   0.460    12.4  74.1     0.242   \n",
+       "4   0.349  ...  14.7  27.2   0.273   0.481    14.2  70.1     0.274   \n",
        "\n",
        "                      Arena  Attend.  Attend./G  \n",
        "0        America West Arena  726,066     17,709  \n",
@@ -439,7 +437,7 @@
        "[5 rows x 120 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +603,7 @@
        "4  NaN   15138           185       Orlando Magic     True  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +663,7 @@
        "0.5951550743255644"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +691,7 @@
        "0.4441067432208479"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,13 +736,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/justinholmes/opt/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_validation.py:536: FitFailedWarning: Estimator fit failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
+      "ValueError: could not convert string to float: 'Seattle SuperSonics'\n",
+      "\n",
+      "  FitFailedWarning)\n",
+      "/Users/justinholmes/opt/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_validation.py:536: FitFailedWarning: Estimator fit failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
+      "ValueError: could not convert string to float: 'Orlando Magic'\n",
+      "\n",
+      "  FitFailedWarning)\n",
+      "/Users/justinholmes/opt/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_validation.py:536: FitFailedWarning: Estimator fit failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
+      "ValueError: could not convert string to float: 'Orlando Magic'\n",
+      "\n",
+      "  FitFailedWarning)\n",
+      "/Users/justinholmes/opt/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_validation.py:536: FitFailedWarning: Estimator fit failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
+      "ValueError: could not convert string to float: 'Orlando Magic'\n",
+      "\n",
+      "  FitFailedWarning)\n",
+      "/Users/justinholmes/opt/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_validation.py:536: FitFailedWarning: Estimator fit failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
+      "ValueError: could not convert string to float: 'Orlando Magic'\n",
+      "\n",
+      "  FitFailedWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf = RandomForestClassifier(random_state = 14)\n",
+    "scores = cross_val_score(clf, X_train, y_train, scoring=scorer)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "clf = RandomForestClassified(random_state = 14)\n",
-    "scores = cross_val_score(clf, X_teams, y_true, scoring=scorer)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -763,7 +795,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
