--- a/Scripts/basicPredictions.ipynb
+++ b/Scripts/basicPredictions.ipynb
@@ -160,6 +160,7 @@
        "4  2005  november   Milwaukee Bucks          92        Orlando Magic       93   \n",
        "\n",
        "  OT?  Attend  Total Points              Winner  \n",
+       "0   0   22076           166     Detroit Pistons  \n",
        "1   0   20041           205    Dallas Mavericks  \n",
        "2   0   18997           167  Los Angeles Lakers  \n",
        "3   2   19730           213      Indiana Pacers  \n",
