--- a/Scripts/basicPredictions.ipynb
+++ b/Scripts/basicPredictions.ipynb
@@ -37,10 +37,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Format data to be used for "
+    "### Format all data"
    ]
   },
   {
