--- a/Scripts/HomeWin-BinaryClassifier.ipynb
+++ b/Scripts/HomeWin-BinaryClassifier.ipynb
@@ -102,12 +102,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "featurePath = '/Users/lorneez/projects/sports_predictor/Sports_Model/Data/DifferentialFeatureData.csv'\n",
     "X = pd.read_csv(featurePath)\n",
+    "\n",
+    "train_stats = X.describe()\n",
+    "train_stats = train_stats.transpose()\n",
+    "def norm(x):\n",
+    "  return (x - train_stats['mean']) / train_stats['std']\n",
+    "X = norm(X)\n",
+    "\n",
+    "\n",
     "y = outcomeData[\"HomeWin\"]\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3)\n",
     "validation_data = (X_test, y_test)"
@@ -115,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -152,67 +160,70 @@
      "text": [
       "Train on 14303 samples, validate on 6131 samples\n",
       "Epoch 1/100\n",
-      "14303/14303 [==============================] - 2s 152us/step - loss: 0.6311 - accuracy: 0.6450 - val_loss: 0.5809 - val_accuracy: 0.6909\n",
+      "14303/14303 [==============================] - 3s 239us/step - loss: 0.6228 - accuracy: 0.6401 - val_loss: 0.5853 - val_accuracy: 0.6836\n",
       "Epoch 2/100\n",
-      "14303/14303 [==============================] - 3s 179us/step - loss: 0.6032 - accuracy: 0.6809 - val_loss: 0.5817 - val_accuracy: 0.6898\n",
+      "14303/14303 [==============================] - 1s 95us/step - loss: 0.5965 - accuracy: 0.6879 - val_loss: 0.5853 - val_accuracy: 0.6836\n",
       "Epoch 3/100\n",
-      "14303/14303 [==============================] - 1s 89us/step - loss: 0.5984 - accuracy: 0.6814 - val_loss: 0.5818 - val_accuracy: 0.6987\n",
+      "14303/14303 [==============================] - 1s 94us/step - loss: 0.5935 - accuracy: 0.6883 - val_loss: 0.5829 - val_accuracy: 0.6904\n",
       "Epoch 4/100\n",
-      "14303/14303 [==============================] - 1s 89us/step - loss: 0.5959 - accuracy: 0.6866 - val_loss: 0.5808 - val_accuracy: 0.6983\n",
+      "14303/14303 [==============================] - 2s 121us/step - loss: 0.5950 - accuracy: 0.6911 - val_loss: 0.5823 - val_accuracy: 0.6901\n",
       "Epoch 5/100\n",
-      "14303/14303 [==============================] - 1s 77us/step - loss: 0.5939 - accuracy: 0.6838 - val_loss: 0.5766 - val_accuracy: 0.6974\n",
+      "14303/14303 [==============================] - 2s 138us/step - loss: 0.5911 - accuracy: 0.6915 - val_loss: 0.5828 - val_accuracy: 0.6899\n",
       "Epoch 6/100\n",
-      "14303/14303 [==============================] - 1s 97us/step - loss: 0.5942 - accuracy: 0.6885 - val_loss: 0.5831 - val_accuracy: 0.6992\n",
+      "14303/14303 [==============================] - 1s 100us/step - loss: 0.5891 - accuracy: 0.6913 - val_loss: 0.5820 - val_accuracy: 0.6912\n",
       "Epoch 7/100\n",
-      "14303/14303 [==============================] - 1s 67us/step - loss: 0.5910 - accuracy: 0.6880 - val_loss: 0.5805 - val_accuracy: 0.7004\n",
+      " 2432/14303 [====>.........................] - ETA: 2s - loss: 0.5912 - accuracy: 0.6854"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lorneez/opt/anaconda3/lib/python3.7/site-packages/keras/callbacks/callbacks.py:95: RuntimeWarning: Method (on_train_batch_end) is slow compared to the batch update (0.223290). Check your callbacks.\n",
+      "  % (hook_name, delta_t_median), RuntimeWarning)\n",
+      "/Users/lorneez/opt/anaconda3/lib/python3.7/site-packages/keras/callbacks/callbacks.py:95: RuntimeWarning: Method (on_train_batch_end) is slow compared to the batch update (0.113132). Check your callbacks.\n",
+      "  % (hook_name, delta_t_median), RuntimeWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14303/14303 [==============================] - 2s 131us/step - loss: 0.5890 - accuracy: 0.6945 - val_loss: 0.5817 - val_accuracy: 0.6893\n",
       "Epoch 8/100\n",
-      "14303/14303 [==============================] - 1s 61us/step - loss: 0.5928 - accuracy: 0.6864 - val_loss: 0.5824 - val_accuracy: 0.6979\n",
+      "14303/14303 [==============================] - 1s 104us/step - loss: 0.5886 - accuracy: 0.6932 - val_loss: 0.5813 - val_accuracy: 0.6898\n",
       "Epoch 9/100\n",
-      "14303/14303 [==============================] - 1s 55us/step - loss: 0.5936 - accuracy: 0.6840 - val_loss: 0.5844 - val_accuracy: 0.6983\n",
+      "14303/14303 [==============================] - 2s 114us/step - loss: 0.5866 - accuracy: 0.6966 - val_loss: 0.5808 - val_accuracy: 0.6924\n",
       "Epoch 10/100\n",
-      "14303/14303 [==============================] - 1s 84us/step - loss: 0.5925 - accuracy: 0.6855 - val_loss: 0.5863 - val_accuracy: 0.7000\n",
+      "14303/14303 [==============================] - 1s 82us/step - loss: 0.5866 - accuracy: 0.6935 - val_loss: 0.5839 - val_accuracy: 0.6893\n",
       "Epoch 11/100\n",
-      "14303/14303 [==============================] - 1s 74us/step - loss: 0.5902 - accuracy: 0.6871 - val_loss: 0.5754 - val_accuracy: 0.7009\n",
+      "14303/14303 [==============================] - 1s 95us/step - loss: 0.5875 - accuracy: 0.6950 - val_loss: 0.5828 - val_accuracy: 0.6890\n",
       "Epoch 12/100\n",
-      "14303/14303 [==============================] - 1s 90us/step - loss: 0.5929 - accuracy: 0.6862 - val_loss: 0.5790 - val_accuracy: 0.7020\n",
+      "14303/14303 [==============================] - 2s 118us/step - loss: 0.5873 - accuracy: 0.6942 - val_loss: 0.5821 - val_accuracy: 0.6891\n",
       "Epoch 13/100\n",
-      "14303/14303 [==============================] - 1s 87us/step - loss: 0.5915 - accuracy: 0.6880 - val_loss: 0.5825 - val_accuracy: 0.6984\n",
+      "14303/14303 [==============================] - 2s 165us/step - loss: 0.5887 - accuracy: 0.6928 - val_loss: 0.5838 - val_accuracy: 0.6885\n",
       "Epoch 14/100\n",
-      "14303/14303 [==============================] - 1s 78us/step - loss: 0.5892 - accuracy: 0.6868 - val_loss: 0.5789 - val_accuracy: 0.6997\n",
+      "14303/14303 [==============================] - 2s 126us/step - loss: 0.5846 - accuracy: 0.6950 - val_loss: 0.5816 - val_accuracy: 0.6878\n",
       "Epoch 15/100\n",
-      "14303/14303 [==============================] - 1s 74us/step - loss: 0.5925 - accuracy: 0.6870 - val_loss: 0.5760 - val_accuracy: 0.6992\n",
+      "14303/14303 [==============================] - 2s 125us/step - loss: 0.5851 - accuracy: 0.6967 - val_loss: 0.5833 - val_accuracy: 0.6893\n",
       "Epoch 16/100\n",
-      "14303/14303 [==============================] - 1s 87us/step - loss: 0.5917 - accuracy: 0.6864 - val_loss: 0.5740 - val_accuracy: 0.7031\n",
+      "14303/14303 [==============================] - 2s 127us/step - loss: 0.5843 - accuracy: 0.6956 - val_loss: 0.5837 - val_accuracy: 0.6885\n",
       "Epoch 17/100\n",
-      "14303/14303 [==============================] - 1s 79us/step - loss: 0.5898 - accuracy: 0.6881 - val_loss: 0.5802 - val_accuracy: 0.7012\n",
+      "14303/14303 [==============================] - 2s 109us/step - loss: 0.5858 - accuracy: 0.6974 - val_loss: 0.5816 - val_accuracy: 0.6881\n",
       "Epoch 18/100\n",
-      "14303/14303 [==============================] - 1s 93us/step - loss: 0.5927 - accuracy: 0.6844 - val_loss: 0.5858 - val_accuracy: 0.7017\n",
+      "14303/14303 [==============================] - 2s 117us/step - loss: 0.5848 - accuracy: 0.6973 - val_loss: 0.5823 - val_accuracy: 0.6885\n",
       "Epoch 19/100\n",
-      "14303/14303 [==============================] - 1s 88us/step - loss: 0.5892 - accuracy: 0.6855 - val_loss: 0.5765 - val_accuracy: 0.7022\n",
-      "Epoch 20/100\n",
-      "14303/14303 [==============================] - 1s 88us/step - loss: 0.5914 - accuracy: 0.6873 - val_loss: 0.5793 - val_accuracy: 0.7033\n",
-      "Epoch 21/100\n",
-      "14303/14303 [==============================] - 1s 80us/step - loss: 0.5913 - accuracy: 0.6898 - val_loss: 0.5812 - val_accuracy: 0.6986\n",
-      "Epoch 22/100\n",
-      "14303/14303 [==============================] - 1s 71us/step - loss: 0.5886 - accuracy: 0.6896 - val_loss: 0.5742 - val_accuracy: 0.7017\n",
-      "Epoch 23/100\n",
-      "14303/14303 [==============================] - 1s 78us/step - loss: 0.5882 - accuracy: 0.6874 - val_loss: 0.5848 - val_accuracy: 0.6996\n",
-      "Epoch 24/100\n",
-      "14303/14303 [==============================] - 1s 81us/step - loss: 0.5907 - accuracy: 0.6839 - val_loss: 0.5774 - val_accuracy: 0.7031\n",
-      "Epoch 25/100\n",
-      "14303/14303 [==============================] - 1s 95us/step - loss: 0.5881 - accuracy: 0.6912 - val_loss: 0.5800 - val_accuracy: 0.7007\n",
-      "Epoch 26/100\n",
-      "14303/14303 [==============================] - 1s 68us/step - loss: 0.5898 - accuracy: 0.6887 - val_loss: 0.5767 - val_accuracy: 0.7027\n",
-      "Epoch 00026: early stopping\n"
+      "14303/14303 [==============================] - 1s 102us/step - loss: 0.5863 - accuracy: 0.6942 - val_loss: 0.5819 - val_accuracy: 0.6912\n",
+      "Epoch 00019: early stopping\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.callbacks.History at 0x1a212dda10>"
+       "<keras.callbacks.callbacks.History at 0x1a2762b590>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,23 +237,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6131/6131 [==============================] - 1s 96us/step\n"
+      "6131/6131 [==============================] - 1s 92us/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.5766993537751793, 0.7026585936546326]"
+       "[0.5818697779111733, 0.6912412047386169]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,23 +267,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.20229256]\n",
-      " [0.60726887]\n",
-      " [0.51420593]\n",
-      " ...\n",
-      " [0.8662132 ]\n",
-      " [0.53903145]\n",
-      " [0.8276886 ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
@@ -282,41 +279,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1483  990]\n",
-      " [1106 2552]]\n"
+      "[[1808  686]\n",
+      " [1306 2331]]\n"
      ]
     }
    ],
    "source": [
     "cm = confusion_matrix(y_test, y_pred)\n",
     "print(cm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6625346599249714"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(1042+3020)/(3020+1042+1431+638)"
    ]
   },
   {
